Added roulette sectors generation

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,7 +17,21 @@
         <p class="header__user-extra">rank</p>
       </div>
     </header>
-    <main class="game"></main>
+    <main class="game">
+      <div class="roulette-container">
+        <div class="roulette">
+          <div class="roulette__arrow"></div>
+          <div class="roulette__centre">🍺</div>
+          <div class="wheel">
+            <template id="sector-template">
+              <div class="wheel__sector">
+                <p class="wheel__sector-text"></p>
+              </div>
+            </template>
+          </div>
+        </div>
+      </div>
+    </main>
     <div class="overlay"></div>
   </body>
 </html>
