Implemented sector definition sequence

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,10 +22,10 @@
         <div class="roulette">
           <div class="roulette__arrow"></div>
           <div class="roulette__centre">🍺</div>
-          <div class="wheel">
+          <div class="wheel wheel_idle">
             <template id="sector-template">
               <div class="wheel__sector">
-                <p class="wheel__sector-text"></p>
+                <p class="wheel__sector-text">Drink</p>
               </div>
             </template>
           </div>
