Added fancy styles to buttons

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </div>
-      <button class="test">Click</button>
+      <button class="button" id="test">Click</button>
     </main>
   </body>
 </html>
