--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -38,6 +38,15 @@
           </div>
         </div>
       </div>
+      <div class="select">
+        <div class="select-list">
+          <button class="select__mode select__mode_active">😇</button>
+          <button class="select__mode">😮‍💨</button>
+          <button class="select__mode">😵‍💫</button>
+          <button class="select__mode">💀</button>
+        </div>
+        <p class="select__text">The day wasn't too hard.</p>
+      </div>
       <button class="button" id="test">Click</button>
     </main>
   </body>
